# webtouch

./: .gitignore  README.md  pyproject.toml
src/webtouch/: __init__.py  __main__.py  app.py  cli.py  common.py  core.py  curses_view.py  example.py  fetch.py  reporter.py  style.css  task.py  textual_main.py  util.py  viewer.py  worker.py
tests/: app.py  play.py  textual_main.py
